added dateInterval property to string fields

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -335,6 +335,8 @@ _UI_StringField_creditCard_feature = Kreditkarte
 _UI_StringField_creditCard_description = Ob dieses Feld einen Kreditkartennummer repräsentiert oder nicht.
 _UI_StringField_currency_feature = Währung
 _UI_StringField_currency_description = Ob dieses Feld einen Währungscode repräsentiert oder nicht.
+_UI_StringField_dateInterval_feature = Zeitintervall
+_UI_StringField_dateInterval_description = Ob dieses Feld einen Zeitintervall repräsentiert oder nicht.
 _UI_StringField_language_feature = Sprache
 _UI_StringField_language_description = Ob dieses Feld einen Sprachcode repräsentiert oder nicht.
 _UI_StringField_locale_feature = Sprachumgebung (Locale)
@@ -477,8 +479,6 @@ _UI_Relationship_source_feature = Quelle
 _UI_Relationship_source_description = Quell-Entität (z.B. Kunden, welche andere Objekte besitzen).
 _UI_Relationship_application_feature = Anwendung
 _UI_Relationship_application_description = Referenz zur enthaltenden Anwendung.
-_UI_Relationship_bidirectional_feature = Bidirektional
-_UI_Relationship_bidirectional_description = Ob dies eine unidirektionale oder eine bidirektionale Assoziation ist.
 _UI_JoinRelationship_sourceAlias_feature = Quelle Alias
 _UI_JoinRelationship_sourceAlias_description = Aliasname für die Quell-Entität aus Ziel-Sicht.
 _UI_JoinRelationship_targetAlias_feature = Ziel Alias
@@ -507,6 +507,20 @@ _UI_JoinRelationship_onDelete_feature = Bei Delete
 _UI_JoinRelationship_onDelete_description = Kaskade-Option für Delete-Operationen auf Datenbankebene.
 _UI_JoinRelationship_editType_feature = Edit-Typ
 _UI_JoinRelationship_editType_description = Welche Operationen auf jeder Seite während dem Editieren möglich sein sollen (Objekt wählen, neue anlegen, bestehende editieren).
+_UI_OneToOneRelationship_bidirectional_feature = Bidirektional
+_UI_OneToOneRelationship_bidirectional_description = Ob dies eine unidirektionale oder eine bidirektionale Assoziation ist.
+_UI_OneToManyRelationship_bidirectional_feature = Bidirektional
+_UI_OneToManyRelationship_bidirectional_description = Ob dies eine unidirektionale oder eine bidirektionale Assoziation ist.
+_UI_ManyToManyRelationship_bidirectional_feature = Bidirektional
+_UI_ManyToManyRelationship_bidirectional_description = Ob dies eine unidirektionale oder eine bidirektionale Assoziation ist.
+_UI_OneToOneRelationship_editType_feature = Edit-Typ
+_UI_OneToOneRelationship_editType_description = Welche Operationen auf jeder Seite während der Bearbeitung möglich sein sollen (Objekt wählen, neue erstellen, bestehende bearbeiten).
+_UI_OneToManyRelationship_editType_feature = Edit-Typ
+_UI_OneToManyRelationship_editType_description = Welche Operationen auf jeder Seite während der Bearbeitung möglich sein sollen (Objekt wählen, neue erstellen, bestehende bearbeiten).
+_UI_ManyToOneRelationship_editType_feature = Edit-Typ
+_UI_ManyToOneRelationship_editType_description = Welche Operationen auf jeder Seite während der Bearbeitung möglich sein sollen (Objekt wählen, neue erstellen, bestehende bearbeiten).
+_UI_ManyToManyRelationship_editType_feature = Edit-Typ
+_UI_ManyToManyRelationship_editType_description = Welche Operationen auf jeder Seite während der Bearbeitung möglich sein sollen (Objekt wählen, neue erstellen, bestehende bearbeiten).
 _UI_OneToOneRelationship_orphanRemoval_feature = Waisen entfernen
 _UI_OneToOneRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
 _UI_OneToOneRelationship_primaryKey_feature = Primärschlüssel
