--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -287,6 +287,7 @@ MostDslQuickfixProvider.UnsetsAllFlagsExceptBic=Alle Flags außer bic zurücksetze
 MostDslQuickfixProvider.UnsetsAllFlagsExceptCountry=Alle Flags außer country zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptCredictCard=Alle Flags außer creditCard zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptCurrency=Alle Flags außer currency zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptDateInterval=Alle Flags außer dateInterval zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptHtmlColour=Alle Flags außer html colour zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptIban=Alle Flags außer iban zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptIsbn=Alle Flags außer isbn zurücksetzen
@@ -316,6 +317,7 @@ MostDslQuickfixProvider.UseAsColour=Als Farbe verwenden
 MostDslQuickfixProvider.UseAsCountry=Als Land verwenden
 MostDslQuickfixProvider.UseAsCreditCard=Als Kreditkarte verwenden
 MostDslQuickfixProvider.UseAsCurrency=Als Währung verwenden
+MostDslQuickfixProvider.UseAsDateInterval=Als Zeitintervall verwenden
 MostDslQuickfixProvider.UseAsEndDate=Als Enddatum verwenden
 MostDslQuickfixProvider.UseAsFuture=Als Zukunft verwenden
 MostDslQuickfixProvider.UseAsIban=Als IBAN verwenden
