--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -130,7 +130,7 @@ MostDslValidator.EntityFieldStringLengthNotLargeEnoughForLanguage=Die String-Län
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForLocale=Die String-Länge für Sprachumgebungen muss mindestens fünf Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForTimezone=Die String-Länge für Zeitzonen muss mindestens 30 Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForUuid=Die String-Länge für UUIDs muss mindestens 36 Zeichen betragen.
-MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von BIC, Land, Währung, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse, Kennwort, Zeitzone und UUID.
+MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von BIC, Land, Währung, Zeitintervall, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse, Kennwort, Zeitzone und UUID.
 MostDslValidator.EntityFieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.EntityFieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
 MostDslValidator.EntityFieldUploadInvalidImageDimensions=Entweder Quadrat- oder Querformat- oder Hochformat-Bilder müssen erlaubt sein.
