added composite flag to var containers

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -563,6 +563,8 @@ _UI_Variables_vars_feature = Variablen
 _UI_Variables_vars_description = Liste der in diesem Container enthaltenen Variablen.
 _UI_Variables_application_feature = Anwendung
 _UI_Variables_application_description = Referenz zur enthaltenden Anwendung.
+_UI_Variables_composite_feature = Kombination
+_UI_Variables_composite_description = Ob dieser Container als Kombinationsvariable agieren soll oder nicht.
 _UI_Variables_sortOrder_feature = Sortierwert
 _UI_Variables_sortOrder_description = Die Sortierungsposition für wenn mehrere Variablen-Sektionen verwendet werden.
 _UI_Variable_name_feature = Name
