Added missing edit type, removed restrictions of some other edit types

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -713,6 +713,7 @@ _UI_RelationFetchType_EAGER_literal = EAGER
 _UI_RelationFetchType_EXTRA_LAZY_literal = EXTRA_LAZY
 _UI_RelationEditType_ACTIVE_NONE_PASSIVE_CHOOSE_literal = ACTIVE_NONE_PASSIVE_CHOOSE
 _UI_RelationEditType_ACTIVE_NONE_PASSIVE_EDIT_literal = ACTIVE_NONE_PASSIVE_EDIT
+_UI_RelationEditType_ACTIVE_CHOOSE_PASSIVE_CHOOSE_literal = ACTIVE_CHOOSE_PASSIVE_CHOOSE
 _UI_RelationEditType_ACTIVE_CHOOSE_PASSIVE_NONE_literal = ACTIVE_CHOOSE_PASSIVE_NONE
 _UI_RelationEditType_ACTIVE_EDIT_PASSIVE_CHOOSE_literal = ACTIVE_EDIT_PASSIVE_CHOOSE
 _UI_RelationEditType_ACTIVE_EDIT_PASSIVE_EDIT_literal = ACTIVE_EDIT_PASSIVE_EDIT
