added sortableGroup property to ManyToOne relationships

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -537,6 +537,8 @@ _UI_OneToManyRelationship_maxTarget_feature = Max Ziel
 _UI_OneToManyRelationship_maxTarget_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird. Muss zusammen mit minTarget verwendet werden.
 _UI_ManyToOneRelationship_primaryKey_feature = Primärschlüssel
 _UI_ManyToOneRelationship_primaryKey_description = Ob dies eine Primary Key Relation ist oder nicht.
+_UI_ManyToOneRelationship_sortableGroup_feature = Sortable-Gruppe
+_UI_ManyToOneRelationship_sortableGroup_description = Ob der Fremdschlüssel dieser Relation als Gruppierungskriterium für die Sortable-Extension agieren soll.
 _UI_ManyToManyRelationship_refClass_feature = Ref.-Klasse
 _UI_ManyToManyRelationship_refClass_description = Name der Referenz Record-Klasse um die Link-Tabelle zu verwalten (z. B. OrderProduct).
 _UI_ManyToManyRelationship_orderBy_feature = Sortieren nach
