default to Zikula 1.5; deprecated 1.4 support; added ZK2DEV version

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -598,6 +598,7 @@ _UI_Controller_application_description = Referenz zur enthaltenden Anwendung.
 _UI_Unknown_feature = Unspezifiziert
 
 _UI_CoreVersion_ZK20_literal = ZK20
+_UI_CoreVersion_ZK2DEV_literal = ZK2DEV
 _UI_CoreVersion_ZK15_literal = ZK15
 _UI_CoreVersion_ZK15DEV_literal = ZK15DEV
 _UI_CoreVersion_ZK14_literal = ZK14
