--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -279,6 +279,10 @@ MostDslQuickfixProvider.SetToExample=Auf Beispiel setzen
 MostDslQuickfixProvider.SetToNow=Auf now setzen
 MostDslQuickfixProvider.SetToZero=Auf null setzen
 MostDslQuickfixProvider.Shrink=Schrumpfen
+MostDslQuickfixProvider.SwitchToZikula15=Zu Zikula 1.5 wechseln
+MostDslQuickfixProvider.SwitchToZikula15Desc=Zu Zikula 1.5 wechseln
+MostDslQuickfixProvider.SwitchToZikula20=Zu Zikula 2.0 wechseln
+MostDslQuickfixProvider.SwitchToZikula20Desc=Zu Zikula 2.0 wechseln
 MostDslQuickfixProvider.UnsetAllEndDatesExceptThisOne=Alle Enddatum-Flags außer diesem zurücksetzen
 MostDslQuickfixProvider.UnsetAllSortablePositionFlagsExceptTheFirstOne=Alle sortable position-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider.UnsetAllStartDatesExceptThisOne=Alle Startdatum-Flags außer diesem zurücksetzen
