added new DSL properties for hook provider support

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -155,6 +155,8 @@ _UI_SettingsContainer_generateIcsTemplates_feature = ICS-Templates generieren
 _UI_SettingsContainer_generateIcsTemplates_description = Ob ICS (iCalendar) Templates generiert werden sollen oder nicht. Benötigt Felder für Start- und Enddatum bei den entsprechenden Entitäten.
 _UI_SettingsContainer_authenticationMethod_feature = Authentifizierungsmethode
 _UI_SettingsContainer_authenticationMethod_description = Ob und welche Art von Authentifizierungsmethode bereitgestellt werden soll.
+_UI_SettingsContainer_filterHookProvider_feature = Filter Hook Provider
+_UI_SettingsContainer_filterHookProvider_description = Ob ein Filter Hook Provider generiert werden soll oder nicht.
 _UI_SettingsContainer_generateOnlyBaseClasses_feature = Nur Basisklassen generieren
 _UI_SettingsContainer_generateOnlyBaseClasses_description = Ob nur Basisklassen generiert werden sollen. Kann nützlich sein zur Durchführung einfacher Aktualisierungen ohne strukturelle Änderungen.
 _UI_SettingsContainer_skipFiles_feature = Dateien überspringen
@@ -239,6 +241,10 @@ _UI_Entity_ownerPermission_feature = Eigner Zugriffsrecht
 _UI_Entity_ownerPermission_description = Ob Benutzer ihre eigenen Daten verwalten und ändern können sollen.
 _UI_Entity_skipHookSubscribers_feature = Hook-Subscriber überspringen
 _UI_Entity_skipHookSubscribers_description = Ob diese Entität Hook-Subscriber unterstützt.
+_UI_Entity_formAwareHookProvider_feature = Form Aware Hook Provider
+_UI_Entity_formAwareHookProvider_description = Ob ein Form Aware Hook Provider generiert werden soll oder nicht.
+_UI_Entity_uiHooksProvider_feature = UI Hooks Provider
+_UI_Entity_uiHooksProvider_description = Ob ein UI Hooks Provider generiert werden soll oder nicht.
 _UI_Entity_actions_feature = Actions
 _UI_Entity_actions_description = Liste der in diesem Entity Controller enthaltenen Aktionen.
 _UI_EntityField_entity_feature = Entität
