--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -614,6 +614,9 @@ _UI_CoreVersion_ZK14DEV_literal = ZK14DEV
 _UI_ApplicationDependencyType_REQUIREMENT_literal = REQUIREMENT
 _UI_ApplicationDependencyType_RECOMMENDATION_literal = RECOMMENDATION
 _UI_ApplicationDependencyType_CONFLICT_literal = CONFLICT
+_UI_HookProviderMode_DISABLED_literal = DISABLED
+_UI_HookProviderMode_ENABLED_literal = ENABLED
+_UI_HookProviderMode_ENABLED_SELF_literal = ENABLED_SELF
 _UI_AuthMethodType_NONE_literal = NONE
 _UI_AuthMethodType_REMOTE_literal = REMOTE
 _UI_AuthMethodType_LOCAL_literal = LOCAL
