introduced role enumeration for string fields replacing several flags

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -333,24 +333,8 @@ _UI_AbstractStringField_sluggablePosition_feature = Sluggable-Position
 _UI_AbstractStringField_sluggablePosition_description = Position dieses Feldes im generierten Slug. Ein Wert von 0 steht für keine Berücksichtigung im Slug.
 _UI_StringField_length_feature = Länge
 _UI_StringField_length_description = Die Länge dieses Feldes.
-_UI_StringField_bic_feature = BIC
-_UI_StringField_bic_description = Ob dieses Feld einen BIC (Business Identifier Code) repräsentiert oder nicht.
-_UI_StringField_country_feature = Land
-_UI_StringField_country_description = Ob dieses Feld einen Ländercode repräsentiert oder nicht.
-_UI_StringField_creditCard_feature = Kreditkarte
-_UI_StringField_creditCard_description = Ob dieses Feld einen Kreditkartennummer repräsentiert oder nicht.
-_UI_StringField_currency_feature = Währung
-_UI_StringField_currency_description = Ob dieses Feld einen Währungscode repräsentiert oder nicht.
-_UI_StringField_dateInterval_feature = Zeitintervall
-_UI_StringField_dateInterval_description = Ob dieses Feld einen Zeitintervall repräsentiert oder nicht.
-_UI_StringField_language_feature = Sprache
-_UI_StringField_language_description = Ob dieses Feld einen Sprachcode repräsentiert oder nicht.
-_UI_StringField_locale_feature = Sprachumgebung (Locale)
-_UI_StringField_locale_description = Ob dieses Feld eine Sprachumgebung (Locale) repräsentiert oder nicht.
-_UI_StringField_htmlcolour_feature = HTML-Farbe
-_UI_StringField_htmlcolour_description = Ob dieses Feld eine HTML-Farbe (wie #336699) repräsentiert oder nicht.
-_UI_StringField_iban_feature = Iban
-_UI_StringField_iban_description = Ob dieses Feld eine IBAN (Internationale Bankkontonummer) repräsentiert oder nicht.
+_UI_StringField_role_feature = Rolle
+_UI_StringField_role_description = Erlaubt die Definition einer semantischen Rolle für dieses Feld.
 _UI_StringField_isbn_feature = Isbn
 _UI_StringField_isbn_description = Erlaubt die Einstellung, ob dieses Feld eine ISBN (Internationale Buchnummer) repräsentiert.
 _UI_StringField_issn_feature = Issn
@@ -363,12 +347,6 @@ _UI_StringField_ipTraceableChangeTriggerField_feature = IP-Verfolgung Change Tri
 _UI_StringField_ipTraceableChangeTriggerField_description = IP-Verfolgung Change Trigger Feldname.
 _UI_StringField_ipTraceableChangeTriggerValue_feature = IP-Verfolgung Change Trigger Wert
 _UI_StringField_ipTraceableChangeTriggerValue_description = IP-Verfolgung Change Trigger Feldwert.
-_UI_StringField_password_feature = Passwort
-_UI_StringField_password_description = Ob dieses Feld ein Kennwort repräsentiert oder nicht.
-_UI_StringField_timezone_feature = Zeitzone
-_UI_StringField_timezone_description = Ob dieses Feld eine Zeitzone repräsentiert oder nicht.
-_UI_StringField_uuid_feature = UUID
-_UI_StringField_uuid_description = Ob dieses Feld eine UUID repräsentiert oder nicht.
 _UI_TextField_length_feature = Länge
 _UI_TextField_length_description = Die Länge dieses Feldes.
 _UI_UserField_blameable_feature = Blameable
@@ -629,6 +607,19 @@ _UI_StringIssnStyle_NORMAL_literal = NORMAL
 _UI_StringIssnStyle_CASE_SENSITIVE_literal = CASE_SENSITIVE
 _UI_StringIssnStyle_REQUIRE_HYPHEN_literal = REQUIRE_HYPHEN
 _UI_StringIssnStyle_STRICT_literal = STRICT
+_UI_StringRole_NONE_literal = NONE
+_UI_StringRole_BIC_literal = BIC
+_UI_StringRole_COLOUR_literal = COLOUR
+_UI_StringRole_COUNTRY_literal = COUNTRY
+_UI_StringRole_CREDIT_CARD_literal = CREDIT_CARD
+_UI_StringRole_CURRENCY_literal = CURRENCY
+_UI_StringRole_DATE_INTERVAL_literal = DATE_INTERVAL
+_UI_StringRole_IBAN_literal = IBAN
+_UI_StringRole_LANGUAGE_literal = LANGUAGE
+_UI_StringRole_LOCALE_literal = LOCALE
+_UI_StringRole_PASSWORD_literal = PASSWORD
+_UI_StringRole_TIME_ZONE_literal = TIME_ZONE
+_UI_StringRole_UUID_literal = UUID
 _UI_IpAddressScope_NONE_literal = NONE
 _UI_IpAddressScope_IP4_literal = IP4
 _UI_IpAddressScope_IP6_literal = IP6
