--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -119,10 +119,10 @@ MostDslValidator.EntityFieldStringLengthMustNotBeGreaterMinLength=Die Größe des 
 MostDslValidator.EntityFieldStringLengthMustNotBeTooLarge=Die Größe des Strings darf nicht größer sein als 255; für größere Daten verwende Text-Felder.
 MostDslValidator.EntityFieldStringLengthMustNotBeZero=Die Größe des Strings darf nicht kleiner als 1 sein.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForBic=Die String-Länge für BIC-Nummern muss mindestens 12 Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForColour=Die String-Länge für Farbcodes muss mindestens sieben Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForCountry=Die String-Länge für Ländercodes muss mindestens zwei Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForCreditCard=Die String-Länge für Kreditkartennummern muss mindestens 20 Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForCurrency=Die String-Länge für Währungscodes muss mindestens drei Zeichen betragen.
-MostDslValidator.EntityFieldStringLengthNotLargeEnoughForHtmlColour=Die String-Länge für HTML-Farbcodes muss mindestens sieben Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForIban=Die String-Länge für IBAN-Nummern muss mindestens 34 Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForIpAddress4=Die String-Länge für IPv4-Adressen muss mindestens 15 Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForIpAddress6=Die String-Länge für IPv6-Adressen muss mindestens 39 Zeichen betragen.
@@ -130,7 +130,7 @@ MostDslValidator.EntityFieldStringLengthNotLargeEnoughForLanguage=Die String-Län
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForLocale=Die String-Länge für Sprachumgebungen muss mindestens fünf Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForTimezone=Die String-Länge für Zeitzonen muss mindestens 30 Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForUuid=Die String-Länge für UUIDs muss mindestens 36 Zeichen betragen.
-MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von BIC, Land, Währung, Zeitintervall, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse, Kennwort, Zeitzone und UUID.
+MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eine spezielle Semantik haben (Rolle, ISBN, ISSN, IP-Adresse).
 MostDslValidator.EntityFieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.EntityFieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
 MostDslValidator.EntityFieldUploadInvalidImageDimensions=Entweder Quadrat- oder Querformat- oder Hochformat-Bilder müssen erlaubt sein.
