--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -203,18 +203,10 @@ MostDslQuickfixProvider.RemoveAllOutgoingInheritanceRelationshipsExceptTheFirstO
 MostDslQuickfixProvider.RemoveAllOutgoingInheritanceRelationshipsExceptTheLastOne=Alle ausgehenden Vererbungsbeziehungen außer der letzten entfernen
 MostDslQuickfixProvider.RemoveAllSettingsContainersExceptTheFirstOne=Alle Einstellungscontainer außer dem ersten entfernen
 MostDslQuickfixProvider.RemoveAllSettingsContainersExceptTheLastOne=Alle Einstellungscontainer außer den letzten entfernen
-MostDslQuickfixProvider.RemoveBicFlag=Das bic-Flag entfernen
-MostDslQuickfixProvider.RemoveColourFlag=Das colour-Flag entfernen
-MostDslQuickfixProvider.RemoveCountryFlag=Das country-Flag entfernen
-MostDslQuickfixProvider.RemoveCreditCardFlag=Das creditCard-Flag entfernen
-MostDslQuickfixProvider.RemoveCurrencyFlag=Das currency-Flag entfernen
 MostDslQuickfixProvider.RemoveTheDbName=Den DB Namen entfernen
 MostDslQuickfixProvider.RemoveEnhancedWorkflow=Den erweiterten Workflow entfernen
 MostDslQuickfixProvider.RemoveGeographicalFlag=Das geographical-Flag entfernen
-MostDslQuickfixProvider.RemoveIbanFlag=Das iban-Flag entfernen
 MostDslQuickfixProvider.RemoveIpAddressSetting=IP-Adresse entfernen
-MostDslQuickfixProvider.RemoveLanguageFlag=Das language-Flag entfernen
-MostDslQuickfixProvider.RemoveLocaleFlag=Das locale-Flag entfernen
 MostDslQuickfixProvider.RemoveLoggableFlag=Das loggable-Flag entfernen
 MostDslQuickfixProvider.RemoveMandatoryFlag=Das mandatory-Flag entfernen
 MostDslQuickfixProvider.RemoveNullableFlag=Das nullable-Flag entfernen
@@ -222,23 +214,18 @@ MostDslQuickfixProvider.RemoveOwnerPermissionFlag=Das ownerPermission-Flag entfe
 MostDslQuickfixProvider.RemovePercentageFlag=Das percentage-Flag entfernen
 MostDslQuickfixProvider.RemovePrimaryKeyFlag=Das PK-Flag entfernen
 MostDslQuickfixProvider.RemoveRangeFlag=Das range-Flag entfernen
+MostDslQuickfixProvider.RemoveRole=Die Rolle entfernen
 MostDslQuickfixProvider.RemoveSuperclassFlag=superclass-Flag entfernen
 MostDslQuickfixProvider.RemoveTheElement=Das Element entfernen
 MostDslQuickfixProvider.RemoveTheField=Das Feld entfernen
-MostDslQuickfixProvider.RemoveTheHtmlColourFlag=Das html colour-Flag entfernen
-MostDslQuickfixProvider.RemoveTheIbanFlag=Das iban-Flag entfernen
 MostDslQuickfixProvider.RemoveTheInheritanceRelationship=Die Vererbungsbeziehung entfernen
 MostDslQuickfixProvider.RemoveTheInvalidIndexItem=Den ungültigen Index-Eintrag entfernen
 MostDslQuickfixProvider.RemoveTheIpAddressSetting=Die IP-Adressen-Einstellung entfernen
 MostDslQuickfixProvider.RemoveTheOutgoingOneToManyRelationship=Die ausgehende Eins-zu-Viele-Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheRelation=Die Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheRelationship=Die Beziehung entfernen
-MostDslQuickfixProvider.RemoveTheTimezoneFlag=Das timezone-Flag entfernen
 MostDslQuickfixProvider.RemoveTheUnrequiredSlugField=Das unbenötigte slug-Feld entfernen
-MostDslQuickfixProvider.RemoveTheUuidFlag=Das UUID-Flag entfernen
-MostDslQuickfixProvider.RemoveTimezoneFlag=timezone-Flag entfernen
 MostDslQuickfixProvider.RemoveUniqueFlag=Das unique-Flag entfernen
-MostDslQuickfixProvider.RemoveUuidFlag=Das UUID-Flag entfernen
 MostDslQuickfixProvider.RemoveVersionFlag=Das version-Flag entfernen
 MostDslQuickfixProvider.RenameTheElementsUsingACounter=Die Elemente mit einem Zähler umbenennen
 MostDslQuickfixProvider.RenameThePositionsUsingACounter=Die Positionen mit einem Zähler umbenennen
@@ -287,21 +274,10 @@ MostDslQuickfixProvider.UnsetAllEndDatesExceptThisOne=Alle Enddatum-Flags außer 
 MostDslQuickfixProvider.UnsetAllSortablePositionFlagsExceptTheFirstOne=Alle sortable position-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider.UnsetAllStartDatesExceptThisOne=Alle Startdatum-Flags außer diesem zurücksetzen
 MostDslQuickfixProvider.UnsetAllVersionFlagsExceptThisOne=Alle version-Flags außer diesem zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptBic=Alle Flags außer bic zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptCountry=Alle Flags außer country zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptCredictCard=Alle Flags außer creditCard zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptCurrency=Alle Flags außer currency zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptDateInterval=Alle Flags außer dateInterval zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptHtmlColour=Alle Flags außer html colour zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptIban=Alle Flags außer iban zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptIsbn=Alle Flags außer isbn zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptIssn=Alle Flags außer issn zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptIpAddress=Alle Flags außer ip address zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptLanguage=Alle Flags außer language zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptLocale=Alle Flags außer locale zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptPassword=Alle Flags außer password zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptTimezone=Alle Flags außer timezone zurücksetzen
-MostDslQuickfixProvider.UnsetsAllFlagsExceptUuid=Alle Flags außer uuid zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptRole=Alle Flags außer der semantischen Rolle zurücksetzen
 MostDslQuickfixProvider.UnsetsAllPrimaryKeyFlagsExceptTheFirstOne=Alle primary key-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider.UnsetTheAggregateFlag=Das aggregate-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheArchiveFlag=Das Archiv-Flag zurücksetzen
@@ -316,29 +292,18 @@ MostDslQuickfixProvider.UnsetTheSortablePositionFlag=Das sortable position-Flag 
 MostDslQuickfixProvider.UnsetTheStartDateFlag=Das Startdatum-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheUniqueFlag=Das unique-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheVersionFlag=Das version-Flag zurücksetzen
-MostDslQuickfixProvider.UseAsBic=Als BIC verwenden
-MostDslQuickfixProvider.UseAsColour=Als Farbe verwenden
-MostDslQuickfixProvider.UseAsCountry=Als Land verwenden
-MostDslQuickfixProvider.UseAsCreditCard=Als Kreditkarte verwenden
-MostDslQuickfixProvider.UseAsCurrency=Als Währung verwenden
-MostDslQuickfixProvider.UseAsDateInterval=Als Zeitintervall verwenden
 MostDslQuickfixProvider.UseAsEndDate=Als Enddatum verwenden
 MostDslQuickfixProvider.UseAsFuture=Als Zukunft verwenden
-MostDslQuickfixProvider.UseAsIban=Als IBAN verwenden
 MostDslQuickfixProvider.UseAsIsbn=Als ISBN verwenden
 MostDslQuickfixProvider.UseAsIssn=Als ISSN verwenden
 MostDslQuickfixProvider.UseAsIpAddress=Als IP-Adresse verwenden
-MostDslQuickfixProvider.UseAsLanguage=Als Sprache verwenden
-MostDslQuickfixProvider.UseAsLocale=Als Sprachumgebung verwenden
-MostDslQuickfixProvider.UseAsPassword=Als Kennwort verwenden
 MostDslQuickfixProvider.UseAsPast=Als Vergangenheit verwenden
 MostDslQuickfixProvider.UseAsSortableField=Als Sortierfeld verwenden
 MostDslQuickfixProvider.UseAsSortableGroup=Als Sortiergruppierung verwenden
 MostDslQuickfixProvider.UseAsStartDate=Als Startdatum verwenden
-MostDslQuickfixProvider.UseAsTimezone=Als Zeitzone verwenden
-MostDslQuickfixProvider.UseAsUuid=Als UUID verwenden
 MostDslQuickfixProvider.UseFirst=Den ersten verwenden
 MostDslQuickfixProvider.UseFirstOne=Den ersten verwenden
+MostDslQuickfixProvider.UseSemanticRole=Semantische Rolle verwenden
 MostDslQuickfixProvider.UseTheFirstActionRemoveTheOthers=Die erste Aktion verwenden, die anderen entfernen
 MostDslQuickfixProvider.UseTheFirstDefaultItemUnsetTheDefaultFlagForAllOtherOnes=Den ersten Standardeintrag verwenden, das Standard-Flag für alle anderen entfernen
 MostDslQuickfixProvider.UseTheFirstEntityAsTheLeadingOne=Die erste Entität als führende verwenden
