added new property

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -119,6 +119,8 @@ _UI_SettingsContainer_generateMailzApi_feature = Mailz Api generieren
 _UI_SettingsContainer_generateMailzApi_description = Ob Support für Mailz generiert werden soll oder nicht.
 _UI_SettingsContainer_generateListBlock_feature = Listenblock generieren
 _UI_SettingsContainer_generateListBlock_description = Ob ein generischer Listenblock generiert werden soll oder nicht.
+_UI_SettingsContainer_generateDetailBlock_feature = Detailblock generieren
+_UI_SettingsContainer_generateDetailBlock_description = Ob ein generischer Block für Detailansichten generiert werden soll oder nicht.
 _UI_SettingsContainer_generateModerationBlock_feature = Moderationsblock generieren
 _UI_SettingsContainer_generateModerationBlock_description = Ob ein Moderationsblock generiert werden soll oder nicht. Benötigt mindestens eine Entität mit einem Workflow mit Freigabe.
 _UI_SettingsContainer_generateListContentType_feature = Listen Content Type generieren
