added missing validation constraint and quickfixes

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -250,6 +250,8 @@ MostDslValidator.RelationshipNeedsApplication=Die Beziehung muss einer Anwendung
 MostDslValidator.RelationshipNeedsSourceEntity=Jede Beziehung muss eine Quell-Entität haben.
 MostDslValidator.RelationshipNeedsTargetEntity=Jede Beziehung muss eine Ziel-Entität haben.
 MostDslValidator.SettingsContainerNeedsApplication=Einstellungen müssen einer Anwendung zugewiesen werden.
+MostDslValidator.SettingsContainerDetailBlockWithoutFinder=Der Detailblock benötigt externen Controller und Finder-Komponente.
+MostDslValidator.SettingsContainerDetailContentTypeWithoutFinder=Det Detail-ContentType benötigt externen Controller und Finder-Komponente.
 MostDslValidator.SettingsContainerScribiteWithoutFinder=Scribite Plugins benötigen externen Controller und Finder-Komponente.
 MostDslValidator.VarContainerNameMustBeUnique=Die Namen der Variablen-Container müssen eindeutig sein.
 MostDslValidator.VarContainerNeedsName=Jeder Variablen-Container muss einen Namen haben.
