--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -148,6 +148,10 @@ MostDslQuickfixProvider.DecreaseMinimumLengthToEqualLength=Minimale Länge reduzi
 MostDslQuickfixProvider.DecreaseMinimumValueToEqualMaximumValue=Minimalen Wert reduzieren und gleich dem maximalen Wert setzen
 MostDslQuickfixProvider.DecreaseMinimumVersionToEqualMaximumVersion=Minimale Version reduzieren und gleich der maximalen Version setzen
 MostDslQuickfixProvider.DecreaseScaleToBecomeLowerThanLength=Scale reduzieren und auf niedrigeren Wert als die Länge setzen
+MostDslQuickfixProvider.DisableDetailBlock=Detailblock deaktivieren
+MostDslQuickfixProvider.DisableDetailBlockDesc=Generierung des Blocks für generische Detailansicht deaktivieren
+MostDslQuickfixProvider.DisableDetailContentType=Detail ContentType deaktivieren
+MostDslQuickfixProvider.DisableDetailContentTypeDesc=Generierung des ContentTypes für generische Detailansicht deaktivieren
 MostDslQuickfixProvider.DisableScribitePlugins=Scribite Plugins deaktivieren
 MostDslQuickfixProvider.DisableScribitePluginsDesc=Generierung von Plugins für mehrere Scribite-Editoren deaktivieren
 MostDslQuickfixProvider.DropPrimaryKeyFlags=Primärschlüssel-Flags zurücksetzen
