added generatePdfSupport setting

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -155,6 +155,8 @@ _UI_SettingsContainer_generateKmlTemplates_feature = KML-Templates generieren
 _UI_SettingsContainer_generateKmlTemplates_description = Ob KML Templates generiert werden sollen oder nicht. Benötigt das geographical-Flag bei den entsprechenden Entitäten.
 _UI_SettingsContainer_generateIcsTemplates_feature = ICS-Templates generieren
 _UI_SettingsContainer_generateIcsTemplates_description = Ob ICS (iCalendar) Templates generiert werden sollen oder nicht. Benötigt Felder für Start- und Enddatum bei den entsprechenden Entitäten.
+_UI_SettingsContainer_generatePdfSupport_feature = PDF-Support generieren
+_UI_SettingsContainer_generatePdfSupport_description = Ob Support zum Exportieren von PDF-Dateien generiert werden soll oder nicht.
 _UI_SettingsContainer_authenticationMethod_feature = Authentifizierungsmethode
 _UI_SettingsContainer_authenticationMethod_description = Ob und welche Art von Authentifizierungsmethode bereitgestellt werden soll.
 _UI_SettingsContainer_filterHookProvider_feature = Filter Hook Provider
