--- a/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages_de.properties
@@ -1,5 +1,10 @@
 #Properties file for de.guite.modulestudio.ui.commands
-DeleteProjectHandler_ConfirmationTitle=Bestätigen
+CopyProjectHandler_DialogTitle=Projektname
+CopyProjectHandler_DialogMessage=Bitte gebe einen Namen für das neue Projekt ein.
+CopyProjectHandler_DialogError_Empty=Du musst einen Namen eingeben.
+CopyProjectHandler_DialogError_Duplicate=Es existiert bereits ein Projekt mit diesem Namen.
+CopyProjectHandler_Failed=Kopieren des Projektes fehlgeschlagen.
+DeleteProjectHandler_ConfirmationTitle=Löschen bestätigen
 DeleteProjectHandler_ConfirmationQuestion=Löschen des Projektes
 DeleteProjectHandler_NoUndo=kann nicht rückgängig gemacht werden
 DeleteProjectHandler_Failed=Löschen des Projektes fehlgeschlagen.
