--- a/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/utils/messages_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/utils/messages_de.properties
@@ -1,4 +1,5 @@
 #Properties file for de.guite.modulestudio.ui.utils
+ProjectLoader_Checking=Prüfe:
 ProjectServices_OpenProject=Projekt öffnen
 ProjectServices_OpenFailed=Das Öffnen des Projektes ist fehlgeschlagen
 ProjectServices_CreateRepresentationsFileFailed=Das Erstellen der Darstellungsdatei ist fehlgeschlagen
