--- a/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/wizard/messages_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/wizard/messages_de.properties
@@ -24,10 +24,10 @@ ModuleStudioProjectImportWizardDescription=Ein bestehendes Projekt öffnen.
 ModuleStudioProjectImportWizard_SelectDirectory=Verzeichnis wählen:
 ModuleStudioProjectImportWizard_SelectDirectoryMessage=Wähle einen Ordner, um nach bestehenden ModuleStudio-Projekten zu suchen.
 ModuleStudioProjectImportWizard_SearchingForProjects=Suche nach Projekten
+ModuleStudioProjectImportWizard_Projects=Projekte:
 ModuleStudioProjectImportWizard_ProcessingResults=Verarbeite Ergebnisse
 ModuleStudioProjectImportWizard_AlreadyExistingProject=Einige Projekte können nicht importiert werden, da sie bereits im Arbeitsbereich existieren.
 ModuleStudioProjectImportWizard_NoProjectsFound=Es wurden keine Projekte gefunden, wähle ein anderes Verzeichnis aus.
-ModuleStudioProjectImportWizard_Checking=Prüfe:
 ModuleStudioProjectImportWizard_BrowseSelectDirectory=Wähle das Verzeichnis des zu öffnenden Projektes aus.
 ModuleStudioProjectImportWizard_CreationProblems=Probleme beim Erstellen
 ModuleStudioProjectImportWizard_ClosingProjectFailed=Das Schließen eines offenen Projektes ist fehlgeschlagen.
