--- a/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -20,22 +20,25 @@ command.file.submenu.open.name=Modell öffnen
 command.file.submenu.open.mnemonic=M
 command.file.submenu.open.description=Ein Modell öffnen oder importieren
 command.file.openproject.name=Projekt öffnen
-command.file.openproject.mnemonic=O
+command.file.openproject.mnemonic=ö
 command.file.openproject.description=Ein bestehendes Modellprojekt öffnen
 command.file.importmodel.name=Modelldatei importieren
-command.file.importmodel.mnemonic=I
+command.file.importmodel.mnemonic=i
 command.file.importmodel.description=Eine bestehende Modelldatei importieren
 command.file.validate.name=Diagramm validieren
-command.file.validate.mnemonic=V
+command.file.validate.mnemonic=v
 command.file.validate.description=Das aktuell geöffnete Diagramm auf Fehler untersuchen
 command.file.generate.name=Anwendung generieren
-command.file.generate.mnemonic=G
+command.file.generate.mnemonic=g
 command.file.generate.description=Den Generator-Workflow starten
+command.file.copyproject.name=Projekt kopieren
+command.file.copyproject.mnemonic=k
+command.file.copyproject.description=Das aktuelle Projekt kopieren
 command.file.deleteproject.name=Projekt löschen
-command.file.deleteproject.mnemonic=L
+command.file.deleteproject.mnemonic=l
 command.file.deleteproject.description=Das aktuelle Projekt löschen
 command.window.submenu.editors.name=Editoren
-command.window.submenu.editors.mnemonic=D
+command.window.submenu.editors.mnemonic=d
 command.window.submenu.editors.description=Unterschiedliche Modell-Editoren
 command.window.submenu.views.name=Views
 command.window.submenu.views.mnemonic=V
@@ -53,7 +56,7 @@ command.window.opendashboardview.name=Dashboard öffnen
 command.window.opendashboardview.mnemonic=D
 command.window.opendashboardview.description=Die Dashboard View anzeigen
 command.window.openerrorlogview.name=Protokoll öffnen
-command.window.openerrorlogview.mnemonic=R
+command.window.openerrorlogview.mnemonic=r
 command.window.openerrorlogview.description=Die Nachrichten View anzeigen
 command.window.openoutlineview.name=Umriss öffnen
 command.window.openoutlineview.mnemonic=U
@@ -88,8 +91,6 @@ help.searchengine.websearch.label=Web-Suche
 help.searchengine.websearch.desc=Führt eine allgemeine Web-Suche durch
 help.embedded_browser=Eingebetteter Browser
 help.system_browser=Standard System Browser
-help.search.zikula.org.label=Zikula.org
-help.search.zikula.org.desc=Die englische Zikula Supportseite durchsuchen
 help.search.zikula.de.label=Zikula.de
 help.search.zikula.de.desc=Die deutsche Zikula Supportseite durchsuchen
 help.search.docs.symfony.label=Symfony Doku
